# ignitionsHacks2

./: CNAME  main.py  pyproject.toml  requirements.txt  sublimetext3_test.php  vercel.json  wsgi.py
static/: base.css
templates/: base.html  site_2.html  upload.html
