[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "flask-tutorial-1"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
Werkzeug = "^2.2.2"
Flask = "^2.2.2"
googletrans = "^3.0.0"
[tool.poetry.dev-dependencies]
